[B][COLOR red]Update - v4.0.2 - July 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Switched IMDb year check for titles to api request for
    small 1/2-3/4 second savings to scrape startup.  Thanks
    for the tip on that hidden api Mr.Anonymous!![/I]
[COLOR yellow]--[/COLOR][I] Code cleanup of forgotten logging.[/I]

[B][COLOR red]Update - v4.0.1 - July 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed pack file resolving when "Directory"
    source select mode is chosen.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue with TMDBHelper passing
    plot that contains quotes.[/I]

[B][COLOR red]Update - v4.0 - July 26, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Pack scraping support added.  This is off by default so
    enable under "Source Options". Resolving support for
    RD and PM only at this time.  Special thanks to Tikipeter
    for his collaboration in this project!!![/I]
[COLOR yellow]--[/COLOR][I] Added "is_airing" for seasons containing unaired
    episodes. This flag will avoid seasonPack scraping for
    seasons that are still airing, which returns nothing
    but incomplete season packs anyway.[/I]
[COLOR yellow]--[/COLOR][I] Added the ability to view pack files via context menu
    option courtesy of TikiPeter. You can pick and play
    any video content.[/I]
[COLOR yellow]--[/COLOR][I] Added "Dev mode" to "Debugging" settings section.
    Please DO NOT USE.  This is for my own testing of
    scrapers to enable or disable and isolate issues.  I
    will not field questions or speak of this section.[/I]
[COLOR yellow]--[/COLOR][I] Added IMDb check for titles and year, just prior to
    scraping.  A number of titles the meta from trakt and
    tmdb differ from IMDb by a year, ex.
    "Dragged Across Concrete" and "Oculus".  Some titles also differ,
    ex. "Star Wars: The Rise of Skywalker" vs.
    "Star Wars: Episode IX - The Rise of Skywalker".[/I]
[COLOR yellow]--[/COLOR][I] Season count is now hard coded ON.  Previously