@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="4.0.2" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="4.0.3" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -34,11 +34,13 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v4.0.2 - July 30, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Switched IMDb year check for titles to api request for
-    small 1/2-3/4 second savings to scrape startup.  Thanks
-    for the tip on that hidden api Mr.Anonymous!![/I]
-[COLOR yellow]--[/COLOR][I] Code cleanup of forgotten logging.[/I]
+[B][COLOR red]Update - v4.0.3 - Aug. 02, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Added new Pack file size calc. function.  This will
+    take the current pack file and calculate the approx. size
+    of each episode inside the pack.  This will also vary
+    based on show Packs that are ranges ex. 1-7 when
+    there are 9 total season.  Only season 1-7 will be
+    accounted for in that case.[/I]
 		</news>
 	</extension>
 </addon>
